# superclinic2-gkv52v

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  deploy-prod.yml  deploy-staging.yml  frontend-ci.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/monitoring/grafana/: Dockerfile
infrastructure/docker/monitoring/jaeger/: Dockerfile
infrastructure/docker/monitoring/prometheus/: Dockerfile
infrastructure/kubernetes/apps/backend/: deployment.yaml  hpa.yaml  service.yaml
infrastructure/kubernetes/apps/frontend/: deployment.yaml  hpa.yaml  service.yaml
infrastructure/kubernetes/base/: configmap.yaml  ingress.yaml  namespace.yaml  network-policies.yaml  secrets.yaml  service-accounts.yaml
infrastructure/kubernetes/monitoring/grafana/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/kubernetes/monitoring/jaeger/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/kubernetes/monitoring/prometheus/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/kubernetes/overlays/prod/: kustomization.yaml
infrastructure/kubernetes/overlays/staging/: kustomization.yaml
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/terraform/environments/prod/: main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/environments/staging/: main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/modules/cloud-run/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/firestore/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/gke/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/pubsub/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/redis/: main.tf  outputs.tf  variables.tf
src/backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/backend/app/: __init__.py  main.py
src/backend/app/api/: __init__.py
src/backend/app/api/v1/: __init__.py  router.py
src/backend/app/api/v1/endpoints/: __init__.py  analytics.py  appointments.py  assistants.py  auth.py  campaigns.py  chats.py  messages.py  payments.py  users.py  webhooks.py
src/backend/app/config/: __init__.py  settings.py
src/backend/app/core/: __init__.py  exceptions.py  logging.py  middleware.py  rate_limiter.py  security.py
src/backend/app/db/: __init__.py  firestore.py  redis.py
src/backend/app/db/migrations/: __init__.py
src/backend/app/db/migrations/versions/: __init__.py
src/backend/app/models/: __init__.py  analytics.py  appointments.py  assistants.py  campaigns.py  chats.py  messages.py  payments.py  users.py
src/backend/app/schemas/: __init__.py  analytics.py  appointments.py  assistants.py  campaigns.py  chats.py  messages.py  payments.py  users.py
src/backend/app/services/: __init__.py
src/backend/app/services/ai/: __init__.py  embeddings.py  gpt.py  intent_classifier.py  knowledge_base.py
src/backend/app/services/analytics/: __init__.py  insights.py  metrics.py  reports.py
src/backend/app/services/calendar/: __init__.py  google.py  scheduler.py
src/backend/app/services/payments/: __init__.py  pix.py  processors.py
src/backend/app/services/whatsapp/: __init__.py  client.py  handlers.py  message_queue.py  templates.py
src/backend/app/utils/: __init__.py  brazilian.py  datetime.py  encryption.py  formatters.py  validators.py
src/backend/scripts/: __init__.py  generate_keys.py  init_knowledge_base.py  seed_data.py  setup_firebase.py
src/backend/tests/: __init__.py  conftest.py  test_main.py
src/backend/tests/api/: __init__.py
src/backend/tests/api/v1/: __init__.py  test_analytics.py  test_appointments.py  test_assistants.py  test_auth.py  test_campaigns.py  test_chats.py  test_messages.py  test_payments.py  test_users.py
src/backend/tests/services/: __init__.py  test_ai.py  test_analytics.py  test_calendar.py  test_payments.py  test_whatsapp.py
src/web/: .env.development  .env.example  .env.production  .eslintrc.json  .prettierrc  Dockerfile  README.md  docker-compose.yml  jest.config.ts  jest.setup.ts  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.ts  tailwind.config.ts  tsconfig.json
src/web/public/: manifest.json  robots.txt
src/web/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/web/src/constants/: analytics.ts  api.ts  auth.ts  routes.ts  ui.ts
src/web/src/hooks/: useAnalytics.ts  useAuth.ts  useCampaign.ts  useChat.ts  useToast.ts  useWebSocket.ts
src/web/src/lib/: api.ts  firebase.ts  socket.ts  storage.ts  validation.ts
src/web/src/services/: analytics.ts  appointments.ts  auth.ts  campaigns.ts  chat.ts  settings.ts
src/web/src/store/: authSlice.ts  campaignSlice.ts  chatSlice.ts  index.ts  settingsSlice.ts
src/web/src/styles/: globals.css
src/web/src/types/: analytics.ts  appointments.ts  auth.ts  (+4 more)
(+87 files in other folders)
