[flake8]
max-line-length = 100
extend-ignore = E203,W503
exclude = .git,__pycache__,build,dist,*.egg-info

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --verbose --cov=app --cov-report=term-missing --asyncio-mode=auto

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
exclude = tests/*

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100

[coverage:run]
source = app
omit = tests/*,*/__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == "__main__":
    pass
    raise ImportError
    except ImportError:

[coverage:html]
directory = coverage_html

[aliases]
test = pytest

[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[egg_info]
tag_build = 
tag_date = 0